[gd_scene load_steps=17 format=3 uid="uid://b5ghv8us3awi6"]

[ext_resource type="PackedScene" uid="uid://dmss42pr707rm" path="res://Assets/kenney_pirate-kit/Models/GLB format/cannon.glb" id="1_hv54s"]
[ext_resource type="Script" path="res://Scenes/Characters/Hazards/Enemies/enemy_cannon.gd" id="2_cj0dg"]
[ext_resource type="PackedScene" uid="uid://nsjluf8e1piw" path="res://Scenes/Characters/Character_UI/health_bar.tscn" id="3_43iii"]
[ext_resource type="PackedScene" uid="uid://bfnlu013474kt" path="res://Scenes/Items/player_projectile_launcher.tscn" id="3_ftfby"]
[ext_resource type="Script" path="res://Scripts/hurtbox.gd" id="3_o7tem"]
[ext_resource type="FontFile" uid="uid://hxqlvug5a3dn" path="res://Assets/Fonts/Sagewold-Regular.ttf" id="4_0eft8"]
[ext_resource type="Script" path="res://Scenes/Items/enemy_projectile_launcher.gd" id="4_ooaih"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_pnjru"]
points = PackedVector3Array(0.701187, 0.635523, 0.0782795, 0.701187, 0.533732, 0.0360712, 0.701187, 0.737417, 0.0360712, 0.40262, 0.644917, 0.990657, 0.539343, 0.299902, 0.634148, 0.539343, 0, 0.634148, 0.701187, 0.491508, -0.065681, 0.284703, 0.929746, 0.990657, 0.701187, 0.779537, -0.065681, 0.284703, 0.360192, 0.990657, 0.439272, 0, 0.734204, 0.539343, 0, -0.634362, 0.701187, 0.533732, -0.167622, -0.000137329, 1.04764, 0.990657, 0.701187, 0.737417, -0.167622, 0.217714, 0.862746, -0.780396, 0.289507, 0.934599, -0.318365, -0.000137329, 1.05466, -0.318365, -0.000137329, 0.242296, 0.990657, -0.439409, 0, 0.734204, 0.439272, 0, -0.734419, 0.539343, 0.299902, -0.634362, 0.701187, 0.635523, -0.20983, -0.28484, 0.929746, 0.990657, -0.701187, 0.779537, -0.065681, 0.307902, 0.644917, -0.780396, 0.109543, 0.754554, -0.934343, -0.000137329, 0.952975, -0.780396, -0.217851, 0.862746, -0.780396, -0.289782, 0.934599, -0.318365, -0.28484, 0.360192, 0.990657, -0.539481, 0, 0.634148, -0.402757, 0.644917, 0.990657, 0.439272, 0.299902, -0.734419, -0.439409, 0, -0.734419, -0.000137329, 0.48996, -0.934343, 0.109543, 0.535384, -0.934343, 0.154843, 0.644917, -0.934343, -0.701187, 0.737417, 0.0360712, -0.701187, 0.737417, -0.167622, -0.000137329, 0.799978, -0.934343, -0.109681, 0.754554, -0.934343, -0.155118, 0.644917, -0.934343, -0.308039, 0.644917, -0.780396, -0.539481, 0.299902, 0.634148, -0.701187, 0.635523, 0.0782795, -0.701187, 0.533732, 0.0360712, -0.701187, 0.491508, -0.065681, -0.539481, 0, -0.634362, -0.439409, 0.299902, -0.734419, -0.109681, 0.535384, -0.934343, -0.539481, 0.299902, -0.634362, -0.701187, 0.635523, -0.20983, -0.701187, 0.533732, -0.167622)

[sub_resource type="BoxShape3D" id="BoxShape3D_ssknj"]
size = Vector3(1.4, 1.104, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_h1qoy"]
radius = 12.0

[sub_resource type="Animation" id="Animation_ltloy"]
resource_name = "fire"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cannon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.349066, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cannon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.1), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pgn7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cannon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cannon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndy6j"]
_data = {
"Fire": SubResource("Animation_ltloy"),
"RESET": SubResource("Animation_pgn7p")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hevog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mckyp"]
bg_color = Color(0.853569, 0.109188, 0, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w3a13"]
properties/0/path = NodePath("EnemyUi/HealthBar:value")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:health")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("cannon:position")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("cannon:rotation")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="EnemyCannon" groups=["Enemy"] instance=ExtResource("1_hv54s")]
script = ExtResource("2_cj0dg")
detection_radius = 16.0
attack_cooldown = 0.15
combo_cooldown = 2.0
health = 50

[node name="ProjectileLauncher" parent="." index="0" instance=ExtResource("3_ftfby")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.65, 1.25)
script = ExtResource("4_ooaih")

[node name="Group" parent="cannon" index="0"]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, -0.228792, 0.3, -0.825)

[node name="Group2" parent="cannon" index="1"]
transform = Transform3D(0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0, 1, 0.51857, 0.222354, -0.825)

[node name="Physics" type="CollisionShape3D" parent="." index="2"]
shape = SubResource("ConvexPolygonShape3D_pnjru")

[node name="HurtBox" type="Area3D" parent="." index="3"]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_o7tem")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="HurtBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.552002, 0)
shape = SubResource("BoxShape3D_ssknj")

[node name="Timer" type="Timer" parent="HurtBox" index="1"]
wait_time = 0.5
one_shot = true

[node name="detection_area" type="Area3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="detection_area" index="0"]
shape = SubResource("SphereShape3D_h1qoy")

[node name="detection_scan" type="Timer" parent="detection_area" index="1"]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_ndy6j")
}

[node name="EnemyUi" type="CanvasLayer" parent="." index="6"]
layer = 0

[node name="HealthBar" parent="EnemyUi" index="0" instance=ExtResource("3_43iii")]
visible = false
offset_left = 187.0
offset_top = 62.0
offset_right = 687.0
offset_bottom = 89.0
theme_override_styles/background = SubResource("StyleBoxEmpty_hevog")
theme_override_styles/fill = SubResource("StyleBoxFlat_mckyp")

[node name="PlayerName" type="Label" parent="EnemyUi/HealthBar" index="2"]
layout_mode = 0
offset_left = 6.0
offset_top = -44.0
offset_right = 222.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("4_0eft8")
theme_override_font_sizes/font_size = 40
text = "Cannon"
vertical_alignment = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="7"]
replication_config = SubResource("SceneReplicationConfig_w3a13")

[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
